[package]
name = "json-shootout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde_json = "1.0.69"
jemallocator = "0.5.0"
simd-json = { version = "0.7.0", features = ["known-key", "jemallocator"], default-features = false }
probes = "0.5.0"
rayon = "1.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
probes = "0.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
libproc = "0.13.0"

[profile.release]
lto = "fat"
codegen-units = 1
