[package]
name = "json-shootout"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.130"
serde_json = "1.0.69"
#jemallocator = "0.5.0"
snmalloc-rs = { version = "0.3.5", features = ["native-cpu"] }
simd-json = { version = "0.9.2", features = ["known-key"], default-features = false }
probes = "0.7.0"
rayon = "1.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
probes = "0.7.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
libproc = "0.14.6"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = "thin"
debug = false
incremental = false
overflow-checks = false
