[package]
name = "json-shootout"
version = "0.1.4"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snmalloc-rs = { version = "0.3.5", features = ["native-cpu"] }
rayon = "1.7.0"
sonic-rs = { version = "0.5.6", features = ["utf8_lossy"] }
rustc-hash = "2.1.1"

[target.'cfg(target_os = "linux")'.dependencies]
probes = "0.7.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
libproc = "0.14.6"

[profile.release]
opt-level = 3
codegen-units = 1
panic = 'abort'
lto = "thin"
debug = false
incremental = false
overflow-checks = false
strip = true
